# sweetalk-design-pattern

./: .gitattributes  .gitignore  README.md
content/: 设计原则.md
docs/: README.md  (+2 more)
src/design_patterns/cpp/: CMakeLists.txt
src/design_patterns/cpp/abstract_factory/: Database.cpp  Database.h
src/design_patterns/cpp/adapter/: PlayAdapter.cpp  PlayAdapter.h  main.cpp
src/design_patterns/cpp/bridge/: HandsetBridge.cpp  HandsetBridge.h  main.cpp
src/design_patterns/cpp/builder/: Person.cpp  Person.h
src/design_patterns/cpp/chain_of_responsibility/: Raise.cpp  Raise.h  main.cpp
src/design_patterns/cpp/command/: OrderCommand.cpp  OrderCommand.h  main.cpp
src/design_patterns/cpp/composite/: ComponentComposite.cpp  ComponentComposite.h  main.cpp
src/design_patterns/cpp/composite/company_management_system/: Company.cpp  Company.h  main.cpp
src/design_patterns/cpp/decorator/: Finery.cpp  Finery.h
src/design_patterns/cpp/facade/: Fund.cpp  Fund.h
src/design_patterns/cpp/factory_method/: Leifeng.cpp  Leifeng.h
src/design_patterns/cpp/flyweight/: WebSite.cpp  WebSite.h  main.cpp
src/design_patterns/cpp/interpreter/: MusicInterpreter.cpp  MusicInterpreter.h  main.cpp
src/design_patterns/cpp/iterator/: Iterator.cpp  Iterator.h  main.cpp
src/design_patterns/cpp/mediator/: UNMediator.cpp  UNMediator.h  main.cpp
src/design_patterns/cpp/memento/: GameRoleMemento.cpp  GameRoleMemento.h  main.cpp
src/design_patterns/cpp/observer/: Boss.cpp  Boss.h
src/design_patterns/cpp/prototype/: Resume.cpp  Resume.h
src/design_patterns/cpp/proxy/: Pursuit.cpp  Pursuit.h
src/design_patterns/cpp/simple_factory/: Operation.cpp  Operation.h
src/design_patterns/cpp/singleton/: Singleton.cpp  SingletonDoubleCheck.cpp  SingletonMultiThread.cpp
src/design_patterns/cpp/state/: Work.cpp  Work.h
src/design_patterns/cpp/strategy/: Cash.cpp  Cash.h
src/design_patterns/cpp/template_method/: TestPaper.cpp  TestPaper.h
src/design_patterns/cpp/visitor/: ManWomanVisitor.cpp  ManWomanVisitor.h  main.cpp
(+252 files in other folders)
